# bullet_chess_heaven_rs

./: .gitignore  CREDITS.ms  Cargo.toml  LICENSE.md  makefile  todo.md
.github/workflows/: ci.yaml  deploy.yaml  deploy.yml
assets/custom/: spritesheet.pxo
assets/fonts/Press_Start_2P/: OFL.txt  PressStart2P-Regular.ttf.import
assets/fonts/monogram/: credits.txt
assets/fonts/monogram/bitmap/: monogram-bitfontmaker.json  monogram-bitmap.json
assets/fonts/monogram/pico-8/: monogram.p8
src/: game_state.rs  globals.rs  main.rs  startup.rs  update.rs
src/board/: board_map.rs  highlight.rs  mod.rs  position.rs  tests.rs  tile.rs
src/board/movement_types/: cache.rs  king.rs  mod.rs  pawn.rs
src/events/: attack.rs  click_tile.rs  mod.rs  update_pos.rs  update_position.rs
src/game_logic/: defeat.rs  mod.rs  score.rs
src/graphics/: camera.rs  mod.rs  resolution.rs  spritesheet.rs  transforms.rs
src/graphics/animations/: death.rs  mod.rs  pulse.rs
src/input/: click_tile.rs  keyboard.rs  mod.rs  player_movement.rs
src/pieces/: attack.rs  common.rs  creature.rs  damage.rs  events.rs  experience.rs  health.rs  healthbar.rs  mod.rs  movement.rs  movement_type.rs  plugin.rs  transforms.rs
src/pieces/enemies/: ai.rs  mod.rs  movement.rs  pawn.rs  spawn.rs
src/pieces/enemies/bishop/: mod.rs
src/pieces/enemies/king/: mod.rs
src/pieces/enemies/knight/: mod.rs
src/pieces/enemies/pawn/: mod.rs  promotion.rs
src/pieces/enemies/queen/: mod.rs
src/pieces/enemies/rook/: mod.rs
src/pieces/player/: animation.rs  experience.rs  gold.rs  mod.rs  spawn.rs
src/pieces/player/upgrades/: commented.rs  data.rs  mod.rs  stats.rs
src/pieces/player/upgrades/unique_upgrades/: attack_random_target.rs  block.rs  chain.rs  convert_enemy.rs  immortal.rs  limit.rs  mod.rs  pawn.rs  pierce.rs
src/plugins/: mod.rs  startup.rs
src/plugins/update/: animation.rs  input.rs  mod.rs  movement.rs
src/resources/: spritesheet.rs
src/states/: game_state.rs  mod.rs  pause_state.rs  turn_state.rs
src/ui/: button.rs  character_info.rs  debug.rs  defeat.rs  game_info.rs  hover_info.rs  messages.rs  mod.rs  right_side.rs  shop.rs
src/utils/: math.rs  mod.rs  rng.rs
