[package]
name = "bullet_chess_heaven_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2" }
bevy_pixel_camera = "0.13.0"
rand = "0.8.5"


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
opt-level = 3
panic = "abort"
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
